--- a/.github/workflows/deploy-to-ec2.yml
+++ b/.github/workflows/deploy-to-ec2.yml
@@ -66,6 +66,16 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
 
+    - name: Debug AWS Setup
+      run: |
+        echo "AWS_REGION: ${{ secrets.AWS_REGION }}"
+        echo "TF_STATE_BUCKET: ${{ secrets.TF_STATE_BUCKET }}"
+        echo "Testing AWS connection..."
+        aws sts get-caller-identity
+        echo "Checking S3 access..."
+        aws s3 ls s3://${{ secrets.TF_STATE_BUCKET }} || echo "Bucket might be empty"
+        echo "✅ AWS credentials verified!"
+
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
       with:
